stopped being lazy and aligned columns

--- a/assets/sass/layouts/_structure.scss
+++ b/assets/sass/layouts/_structure.scss
@@ -16,11 +16,20 @@ body {
 .wrap {}
 
 #main {
-	padding: 0 40px;
+
 }
 
 #primary {
 	@include clearfix;
+	padding: 30px;
+
+	@include media($sm) {
+		@include span-columns( 4 );
+	}
+	@include media($md) {
+		@include span-columns( 3.5 );
+		padding: 0 0 0 30px;
+	}
 	margin: auto;
 	width: 100%;
 
@@ -34,6 +43,14 @@ body {
 
 }
 #secondary {
+	@include media($sm) {
+		@include span-columns( 4 );
+		padding: 30px;
+	}
+	@include media($md) {
+		@include span-columns( 2 );
+	}
 	margin: 20px auto;
+	padding: 0 30px 0 0;
 	width: 100%;
 }
